<resources>
    <string name="app_name">Android Scholarship Quiz</string>
    <string name="question_1a_header">Lesson 1A</string>
    <string name="question_1a">What is recomended unit for text size?</string>
    <string name="question_1_answ_1">px</string>
    <string name="question_1_answ_2">dp</string>
    <string name="question_1_answ_3">sp</string>
    <string name="correct_3b">3B. It is correct.\n</string>
    <string name="wrong_3b">3B. Wrong. The correct answer is Button and CheckBox.\n</string>
    <string name="correct_3a">3A. It is correct.\n</string>
    <string name="wrong_3a">3A. Wrong. The correct answer is findViewbyId.\n</string>
    <string name="correct_2b">2B. It is correct.\n</string>
    <string name="wrong_2b">2B. Wrong. The correct answer is \\n.\n</string>
    <string name="correct_2a">2A. It is correct.\n</string>
    <string name="wrong_2a">2A. Wrong. The correct answer is logcat.\n</string>
    <string name="correct_1B">1B. It is correct\n</string>
    <string name="wrong_1b">1B. Wrong. The correct answer is padding.\n</string>
    <string name="answer_3a">findViewById</string>
    <string name="correct_1a">1A. It is correct.\n</string>
    <string name="wrong_1a">1A. Wrong. The correct answer is sp.\n</string>
    <string name="image_description">Android in green electronics</string>
    <string name="reset_button_text">Reset</string>
    <string name="submit_button_text">Submit</string>
    <string name="question_1b_header">Lesson 1B</string>
    <string name="question_1b">What xml attribute can add whitespaces to the View?</string>
    <string name="question_2a">How it is called a mechanism for collecting and viewing system debug output?</string>
    <string name="question_2a_header">Lesson 2A</string>
    <string name="question_2b_header">Lesson 2B</string>
    <string name="question_2b">What is escape sequences inserting a newline in the text?</string>
    <string name="question_3a_header">Lesson 3A</string>
    <string name="question_3a">What is name of the function which finds the view that coresponds with the resource id passed as an input?</string>
    <string name="question_3b_header">Lesson 3B</string>
    <string name="question_3b">Which of the following is an input control?</string>
    <string name="question_1b_answer_1">width</string>
    <string name="question_1b_answer_2">layout_margin</string>
    <string name="question_1b_answer_3">padding</string>
    <string name="question_2a_hint">Answer</string>
    <string name="question_3a_hint">Answer</string>
    <string name="question_3b_answer_1">Button</string>
    <string name="question_3b_answer_2">CheckBox</string>
    <string name="question_3b_answer_3">TextView</string>
</resources>
